2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/43_AsmavecCaracSpecial.deca
// Description:
//    Programme : utilisation de asm avec plusieurs ligne 
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 19/01/2024
class A {
    void Str() asm ("hello 
     the world !
     Bonjour !
     tout le monde .")
    ;
}