2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/25_AsmAvecSemiCoteString.deca
// Description:
//    Programme mal utilisantion de asm , utilisation de ; juste après le STRING
// Resultats:
//      Programme incorrecte syntaxiquement : 3:30: extraneous input ';' expecting ')'
// Historique:
//    cree le 18/01/2023
class H {
    int f;
    void F(int x) asm ("hello";) ;
}